# safetyculture-exporter

./: .codeclimate.yml  .gitignore  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  csvExporter.py  docker-compose-local-volume.yml  docker-compose.yml  edd-compose.yml  export_5S.py  exporter.py  go.mod  go.sum  go.work  go.work.sum  goreleaser_entry.sh  main.py  mkdocs.yml  model.py  pyproject.toml  requirements.txt  retrieve.py  safetypy.py  schedule-exporter.py  teams.pk  teamtrain.py  test.pem  testpy 2.py  trainingpy.py  ttconfig.ini  users.csv
.github/: CODEOWNERS  dependabot.yml  ghbot.toml  trufflehog.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/trufflehog/: exclude-files.txt
.github/workflows/: build.yml  ci-cli.yml  ci-ui.yml  goreleaser.yml  release.yml  security-scan.yml  tests.yml
.planning/: PROJECT.md
ExampleCSV/: courses.csv  records.csv  users.csv
New Folder With Items/orig-safetyculture-sdk-python/: setup.py
bksafetyculture-sdk-python-beta/: pyproject.toml
bksafetyculture-sdk-python-beta/safetyculture-sdk-python-beta/: safetypy.py
cli/: Dockerfile  docker-compose-local-volume.yml  go.mod  go.sum
cli/docs/: safetyculture-exporter_inspection-json.md  safetyculture-exporter_schema.md
cmd/iauditor-exporter/: main.go
cmd/safetyculture-exporter/: main.go
configs/: config.yaml  config.yaml.sample  edd.yaml
docs/: conf.py  datastructure.md  iauditor-exporter.md  iauditor-exporter_configure.md  iauditor-exporter_csv.md  iauditor-exporter_inspection-json.md  iauditor-exporter_report.md  iauditor-exporter_schema.md  iauditor-exporter_sql.md  index.md  install.md  safetyculture-exporter.md  safetyculture-exporter_configure.md  safetyculture-exporter_csv.md  safetyculture-exporter_report.md  safetyculture-exporter_sql.md
docs/Install-python/: mac.md  windows.md
docs/css/: extra.css
docs/install-intros/: linux-install.md  quick-install.md  upgrading.md
docs/script-download/: git.md  manual-dl.md
docs/script-running/: export-options.md  overview.md
docs/script-setup/: config.md  installing-packages.md  mysql.md  other-databases.md
docs/understanding-the-data/: overview.md  the-model.md
exports/: iauditor_actions.csv
iauditor_exporter/: Procfile  README.md  app.json  exporter.py  requirements.txt  schedule-exporter-batch-file  schedule-exporter.py
iauditor_exporter/docs/: index.md
iauditor_exporter/modules/: actions.py  (+12 more)
last_successful/: last_successful_actions_export-test.txt
modules/: actions.py  exporters.py  global_variables.py  last_successful.py  logger.py  media.py  model.py  other.py  settings.py  sql.py  testpy.py  web-report-links.py  web_report_links.py
oldscpy/: pyproject.toml
safetyculture-sdk-python/: Dockerfile  README.md  pyproject.toml  setup.py
safetyculture-sdk-python-beta/: pyproject.toml
safetyculture-sdk-python-beta/safetyculture_sdk_python_beta/: safetypy.py
safetyculture-sdk-python-beta/safetyculture_sdk_python_beta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
safetyculture-sdk-python-beta/safetypy/: safetypy.py
safetyculture-sdk-python-beta/tests/: test_safetyculture_sdk_python_beta.py
safetyculture-sdk-python/safetyculture_sdk_python_beta.egg-info/: top_level.txt
safetyculture-sdk-python/safetypy/: safetypy.py
safetyculture-sdk-python/tools/exporter/: .env.sample  csvExporter.py  docker-compose.yml  exporter.py  exporter.spec  hook-sqlalchemy_pyodbc_mssql.py  model.py  requirements.txt
safetyculture-sdk-python/tools/exporter/last_successful/: last_successful-Accor-Luxury.txt  last_successful-Accor-Security.txt  last_successful-RBS.txt
safetyculture-sdk-python/tools/sync_users/: example_user_listing.csv
safetypy/: pyproject.toml
safetypy/tests/: test_safetypy.py
ui/: app.go  go.mod  go.sum  main.go  wails.json
(+813 files in other folders)
