[tool.poetry]
name = "iauditor-exporter"
version = "1.5"
description = "The iAuditor Exporter tool is the primary way to bulk export iAuditor information for use in BI tools such as PowerBI."
authors = ["Edd <edward.abrahamsen-mills@safetyculture.io>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
