[tool.poetry]
name = "iauditor-exporter"
version = "1.5"
description = "The iAuditor Exporter tool is the primary way to bulk export iAuditor information for use in BI tools such as PowerBI."
authors = ["Edd <edward.abrahamsen-mills@safetyculture.io>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.3.1"
unicodecsv = ">=0.14.1"
tzlocal = ">=2.0.0"
pytz = ">=2019.2"
SQLAlchemy = ">=1.3.4"
python_dateutil = ">=2.8.0"
pandas = ">=0.24.2"
numpy = ">=1.16.4"
sqlalchemy-pyodbc-mssql = ">=0.1.0"
coloredlogs = ">=10.0"
safetyculture-sdk-python-beta = ">=2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
