[tool.poetry]
name = "safetyculture-sdk-python-beta"
version = "2.1.0"
description = "Beta version of the SafetyCulture Python SDK"
authors = ["Edd <edward.abrahamsen-mills@safetyculture.io>"]
packages = [
    { include = "safetypy"}
    ]

[tool.poetry.dependencies]
python = "^3.7"
future = ">=0.18.2"
requests = ">=2.22.0"
pyyaml = ">=5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
