[tool.poetry]
name = "safetyculture-sdk-python-beta"
version = "2.1"
description = "Beta version of the SafetyCulture Python SDK"
authors = ["Edd <edward.abrahamsen-mills@safetyculture.io>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
