[tool.poetry]
name = "safetypy"
version = "0.1.0"
description = ""
authors = ["Edd <edward.abrahamsen-mills@safetyculture.io>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
